# maf_2_the_max

./: .env.example  README.md  pyproject.toml
01-agent_types/: 00-inspect_mcp_tools.py  01-basic_ai_foundry_agent.py  02-streaming_agent.py  03-create_ai_foundry_agent.py  04-local_tools.py  04b-test.py  05-mcp_tools.py  06-agent_mcp_client.py  07-threads.py  08-chat_message_store.py  09-context_provider.py  10-middleware.py  README.md
01-agent_types/core/: agent.py
01-agent_types/mcp-servers/: agent_mcp_server.py  server.py
01-basics/: 01-basic_ai_foundry_agent.py  02-streaming_agent.py  03-create_ai_foundry_agent.py
02-chat_agents/: 01-chat_completion_agent.py  README.md
02-tools_and_mcp/: 01-local_tools.py  02-mcp_tools.py  03-agent_mcp_client.py
02-tools_and_mcp/mcp-servers/: agent_mcp_server.py
03-extras/: 01-threads.py  02-chat_message_store.py  03-context_provider.py  04-middleware.py  08-chat_message_store.py
03-workflows/: 02-agents_in_workflow.py
04-dev_ui/: 01-demo.py
04-workflows/: 01-basic.py  03-control_flow.py  04-worklfow_as_agent.py
